--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/2,4-D/2,4-D_Absolute ED/MIs_2,4-D_GH_A82_DR Biomass.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/2,4-D/2,4-D_Absolute ED/MIs_2,4-D_GH_A82_DR Biomass.Rmd
@@ -95,6 +95,8 @@ model.W1.3 <- drm(biomass ~ rate, herb, fct = W1.3(), data = data_A82, type = "c
 
 plot(fitted(model.W1.3), residuals(model.W1.3))
 
+qqnorm(residuals(model.W1.3))
+
 
 modelFit(model.W1.3)
 
