--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/2,4-D/2,4-D_Absolute ED/MIs_2,4-D Only_GC_A101_ DR Biomass.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/2,4-D/2,4-D_Absolute ED/MIs_2,4-D Only_GC_A101_ DR Biomass.Rmd
@@ -131,7 +131,7 @@ ED50.ambient <- ED(model.W1.3, (summary(model.W1.3)$coefficients[4, 1] * 0.5), c
 
 EDcomp(model.W1.3, c((summary(model.W1.3)$coefficients[4, 1] * 0.5),
                      (summary(model.W1.3)$coefficients[3, 1] * 0.5)), 
-       compMatch = c("elevated", "ambient"), type = "absolute", interval = "none", reverse = F)
+       compMatch = c("elevated", "ambient"), type = "absolute", interval = "none", reverse = T)
 
 
 # Comparing b parameter (slope)
