--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Mesotrione/Mesotrione_Absolute ED/MIs_Meso_GH_A103_DR Biomass.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Mesotrione/Mesotrione_Absolute ED/MIs_Meso_GH_A103_DR Biomass.Rmd
@@ -28,11 +28,7 @@ data <- read.csv("Data Sheet_Meso_GH.csv")
 
 str(data)
 
-<<<<<<< HEAD
-data_A101 <- data %>% filter(pop == "A101")
-=======
 data_A103 <- data %>% filter(pop == "A103")
->>>>>>> 91c2856e4a714be83ced42e172e6a4bad5f12c70
 
 
 
@@ -40,17 +36,6 @@ fun <- function(x){
   c( mean = mean(x), VAR = var(x), SD = sd(x), SE = std.error(x), n = length(x))
 }
 
-<<<<<<< HEAD
-summary.meso <- summaryBy(cbind(biomass) ~ herb + rate, data = subset(data_A101, herb=="meso"),
-          FUN=fun)
-
-
-summary.meso_GST <- summaryBy(cbind(biomass) ~ herb + rate, data = subset(data_A101, herb=="meso+GST"),
-          FUN=fun)
-
-
-summary.meso_P450 <- summaryBy(cbind(biomass) ~ herb + rate, data = subset(data_A101, herb=="meso+P450"),
-=======
 summary.meso <- summaryBy(cbind(biomass) ~ herb + rate, data = subset(data_A103, herb=="meso"),
           FUN=fun)
 
@@ -60,7 +45,6 @@ summary.meso_GST <- summaryBy(cbind(biomass) ~ herb + rate, data = subset(data_A
 
 
 summary.meso_P450 <- summaryBy(cbind(biomass) ~ herb + rate, data = subset(data_A103, herb=="meso+P450"),
->>>>>>> 91c2856e4a714be83ced42e172e6a4bad5f12c70
           FUN=fun)
 
 
@@ -72,11 +56,7 @@ summary.meso_P450 <- summaryBy(cbind(biomass) ~ herb + rate, data = subset(data_
 
 ```{r}
 
-<<<<<<< HEAD
-model.LL4 <- drm(biomass ~ rate, herb, fct = LL.4(), data = data_A101, type = "continuous")
-=======
 model.LL4 <- drm(biomass ~ rate, herb, fct = LL.4(), data = data_A103, type = "continuous")
->>>>>>> 91c2856e4a714be83ced42e172e6a4bad5f12c70
 
 
 plot(fitted(model.LL4), residuals(model.LL4))
@@ -111,11 +91,7 @@ mselect(model.LL4,  list(L.3(), L.4(), L.5(), LL.2(), LL.3(), LL.3u(), LL.4(), L
 # Lower IC, which actually is AIC (default), indicates the best model to be used. On the other hand, the highest the Lack of Fit, better the model. The two-, three-, and four-parameter log-logistic models are are symmetrical around the inflection point (parameter "e") while others (e.g. fiveparameter log-logistic, Gompertz, and Weibull) are asymmetrical. In symmetrical models, the parameter "e" and relative ED50 are identical, that is, they both indicate the dose that reduces the response midway between the upper and lower limits. In asymmetrical models, however, the parameter "e" does not have the same meaning as in symmetrical models, even though it is still the location of the inflection point. Therefore, in asymmetrical models, ED50 should be estimated as "absolute" and not relative.
 
 
-<<<<<<< HEAD
-model.W1.3 <- drm(biomass ~ rate, herb, fct = W1.3(), data = data_A101, type = "continuous")
-=======
 model.W1.3 <- drm(biomass ~ rate, herb, fct = W1.3(), data = data_A103, type = "continuous")
->>>>>>> 91c2856e4a714be83ced42e172e6a4bad5f12c70
 
 plot(fitted(model.W1.3), residuals(model.W1.3))
 
@@ -159,7 +135,7 @@ ED50.meso.GST <- ED(model.W1.3, (summary(model.W1.3)$coefficients[6, 1] * 0.5), 
 
 EDcomp(model.W1.3, c((summary(model.W1.3)$coefficients[4, 1] * 0.5),
                      (summary(model.W1.3)$coefficients[5, 1] * 0.5)), 
-       compMatch = c("meso", "meso+P450"), type = "absolute", interval = "none", reverse = T)
+       compMatch = c("meso", "meso+P450"), type = "absolute", interval = "none", reverse = F)
 
 
 EDcomp(model.W1.3, c((summary(model.W1.3)$coefficients[4, 1] * 0.5),
@@ -187,11 +163,7 @@ compParm(model.W1.3, strVal = "e", operator = "-") # Remember that for assymetri
 
 ```{r}
 
-<<<<<<< HEAD
 tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Mesotrione/Mesotrione_Absolute ED/GH_Meso_A101_DR Biomass.tiff",
-=======
-tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Mesotrione/Mesotrione_Absolute ED/GH_Meso_A103_DR Biomass.tiff",
->>>>>>> 91c2856e4a714be83ced42e172e6a4bad5f12c70
      width = 10, height = 8, units = "in", res = 600, compression = "lzw")
 
 
@@ -201,11 +173,7 @@ par(mar = c(5,5,1,1))
 plot(model.W1.3,
      type = "average",
      xlab = expression(paste("Mesotrione rate (g ai ha"^-1, ")")),
-<<<<<<< HEAD
      ylab = expression(paste("A101 Biomass (g plant"^-1, ")")),
-=======
-     ylab = expression(paste("A103 Biomass (g plant"^-1, ")")),
->>>>>>> 91c2856e4a714be83ced42e172e6a4bad5f12c70
      ylim = c(0, 4),
      #broken = T,
      col = c("darkgreen", "red", "navy"),
