--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Atrazine/Atrazine_Absolute ED/MIs_Atra_GH_A103_DR Biomass.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Atrazine/Atrazine_Absolute ED/MIs_Atra_GH_A103_DR Biomass.Rmd
@@ -140,7 +140,7 @@ EDcomp(model.W1.3, c((summary(model.W1.3)$coefficients[4, 1] * 0.5),
 
 EDcomp(model.W1.3, c((summary(model.W1.3)$coefficients[4, 1] * 0.5),
                      (summary(model.W1.3)$coefficients[6, 1] * 0.5)), 
-       compMatch = c("atra", "atra+GST"), type = "absolute", interval = "none", reverse = T)
+       compMatch = c("atra", "atra+GST"), type = "absolute", interval = "none", reverse = F)
 
 
 # Comparing b parameter (slope)
