--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/Mesotrione_Absolute ED/MIs_Meso+P450_GC_A82_ DR Biomass.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/Mesotrione_Absolute ED/MIs_Meso+P450_GC_A82_ DR Biomass.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Waterhemp MIs GC 2,4-D Biomass"
+title: "Waterhemp MIs GC Mesotrione Biomass"
 author: "Felipe Faleco"
 date: "02/22/2023"
 output:
@@ -26,12 +26,12 @@ library(dplyr)
 
 ```{r}
 
-data <- read.csv("Data Sheet_2,4-D_GC.csv")
+data <- read.csv("Data Sheet_Meso_GC.csv")
 
 str(data)
 
 
-data.A82.24D.P450 <- data %>% filter(pop == "A82", herb == "2,4D+P450")
+data.A82.meso.P450 <- data %>% filter(pop == "A82", herb == "meso+P450")
 
 
 
@@ -39,7 +39,7 @@ fun <- function(x){
   c( mean = mean(x), VAR = var(x), SD = sd(x), SE = std.error(x), n = length(x))
 }
 
-summary.A82.24D.P450 <- summaryBy(cbind(biomass) ~ pop + rate + temp + herb, data = subset(data.A82.24D.P450),
+summary.A82.meso.P450 <- summaryBy(cbind(biomass) ~ pop + rate + temp + herb, data = subset(data.A82.meso.P450),
           FUN=fun)
 
 
@@ -47,19 +47,19 @@ summary.A82.24D.P450 <- summaryBy(cbind(biomass) ~ pop + rate + temp + herb, dat
 
 
 
-# MODEL LL.4
+# MODEL LL2.3
 
 ```{r}
 
-model.LL4 <- drm(biomass ~ rate, temp, fct = LL.4(), data = data.A82.24D.P450, type = "continuous")
+model.LL2.3 <- drm(biomass ~ rate, temp, fct = LL2.3(), data = data.A82.meso.P450, type = "continuous")
 
 
-plot(fitted(model.LL4), residuals(model.LL4))
+plot(fitted(model.LL2.3), residuals(model.LL2.3))
 
                 
-modelFit(model.LL4) # higher the p-value, better.
+modelFit(model.LL2.3) # higher the p-value, better.
 
-summary(model.LL4) 
+summary(model.LL2.3) 
 
 # c: lower limit (models with negative lower limit are biologically impossible. E.g., negative biomass, negative % biomass reduction, or negative % control)
 
@@ -80,26 +80,26 @@ summary(model.LL4)
 getMeanFunctions() # To get the most used functions when fitting dose-response curves.
 
 
-mselect(model.LL4,  list(L.3(), L.4(), L.5(), LL.2(), LL.3(), LL.3u(), LL.4(), LL.5(), W1.2(), W1.3(), W1.4(), W2.2(), W2.3(), W2.4(), BC.4(), BC.5(), LL2.2(), LL2.3(), LL2.3u(), LL2.4(), LL2.5(), AR.2(), AR.3(), MM.2(), MM.3(), baro5()), linreg = T)
+mselect(model.LL2.3,  list(L.3(), L.4(), L.5(), LL.2(), LL.3(), LL.3u(), LL.4(), LL.5(), W1.2(), W1.3(), W1.4(), W2.2(), W2.3(), W2.4(), BC.4(), BC.5(), LL2.2(), LL2.3(), LL2.3u(), LL2.4(), LL2.5(), AR.2(), AR.3(), MM.2(), MM.3(), baro5()), linreg = T)
 
 
 # Lower IC, which actually is AIC (default), indicates the best model to be used. On the other hand, the highest the Lack of Fit, better the model. The two-, three-, and four-parameter log-logistic models are are symmetrical around the inflection point (parameter "e") while others (e.g. fiveparameter log-logistic, Gompertz, and Weibull) are asymmetrical. In symmetrical models, the parameter "e" and relative ED50 are identical, that is, they both indicate the dose that reduces the response midway between the upper and lower limits. In asymmetrical models, however, the parameter "e" does not have the same meaning as in symmetrical models, even though it is still the location of the inflection point. Therefore, in asymmetrical models, ED50 should be estimated as "absolute" and not relative.
 
 
-model.LL2.3 <- drm(biomass ~ rate, temp, fct = LL2.3(), data = data.A82.24D.P450, type = "continuous")
+#model.LL2.3 <- drm(biomass ~ rate, temp, fct = LL2.3(), data = data.A82.meso.P450, type = "continuous")
 
 
-plot(fitted(model.LL2.3), residuals(model.LL2.3))
+#plot(fitted(model.LL2.3), residuals(model.LL2.3))
 
-qqnorm(residuals(model.LL2.3))
+#qqnorm(residuals(model.LL2.3))
 
                 
-modelFit(model.LL2.3)
+#modelFit(model.LL2.3)
 
 summary(model.LL2.3) 
 
 
-anova(model.LL2.3, model.LL4) # p-value > 0.05 means that there is no difference between models. Therefore, we can use model LL.3
+#anova(model.LL2.3, model.LL4) # p-value > 0.05 means that there is no difference between models. Therefore, we can use model LL.3
 
 ```
 
@@ -154,7 +154,7 @@ compParm(model.LL2.3, strVal = "e", operator = "-") # Remember that for asymmetr
 
 ```{r}
 
-tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/2,4-D/2,4-D_Absolute ED/MIs_2,4-D+P450_GC_A82_ DR Biomass.tiff",
+tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/Mesotrione_Absolute ED/MIs_Meso+P450_GC_A82_DR Biomass.tiff",
      width = 10, height = 8, units = "in", res = 600, compression = "lzw")
 
 
@@ -163,16 +163,16 @@ par(mar = c(5,5,1,1))
 
 plot(model.LL2.3,
      type = "average",
-     xlab = expression(paste("2,4-D rate (g ae ha"^-1, ")")),
+     xlab = expression(paste("Mesotrione+P450 rate (g ai ha"^-1, ")")),
      ylab = expression(paste("A82 biomass (g plant"^-1, ")")),
-     ylim = c(0, 4),
+     ylim = c(0, 6),
      col = c("red", "darkgreen"),
      pch = c(19, 17),
      cex = 1.5,
      cex.axis = 1.3,
      cex.lab = 1.9,
      cex.legend = 2.0,
-     legendPos = c(9000, 4.0),
+     legendPos = c(400, 4.0),
      lwd = 1.5)
 
 
