--- a/PhD/WiscWeeds/Waterhemp/Waterhemp PRE_Bill Stangel/Absolute ED50/PRE_BS_fome_DR_counts.Rmd
+++ b/PhD/WiscWeeds/Waterhemp/Waterhemp PRE_Bill Stangel/Absolute ED50/PRE_BS_fome_DR_counts.Rmd
@@ -51,13 +51,13 @@ summary.A66 <- summaryBy(cbind(count, biomass) ~ rate + pop, data = subset(data,
 
 ```{r}
 
-model.LL4<- drm(count~ rate, pop, fct = LL.4(), data = data, type = "continuous")
+model.LL.4 <- drm(count~ rate, pop, fct = LL.4(), data = data, type = "continuous")
 
 
                 
-modelFit(model.LL4) # higher the p-value, better.
+modelFit(model.LL.4) # higher the p-value, better.
 
-summary(model.LL4) 
+summary(model.LL.4) 
 
 # c: lower limit (models with negative lower limit are biologically impossible. E.g., negative biomass, negative % biomass reduction, or negative % control)
 
@@ -75,57 +75,73 @@ summary(model.LL4)
 
 ```{r, warning=FALSE}
 
-mselect(model.LL4,  list(L.3(), L.4(), L.5(), LL.2(), LL.3(), LL.4(), LL.5(), W1.3(), W1.4(), W2.4(), baro5()), linreg = T) 
-
-#LL.4 better option here (lower IC, which actually is AIC (default)). W1.3 could also be used, but since it is a asymmetrical model, I would give preference to LL.4 In symmetrical models, the parameter e and relative ED50 are identical, that is, they both indicate the dose that reduces the response midway between the upper and lower limits. In asymmetrical models, however, the parameter e does not have the same meaning as in symmetrical models, even though it is still the location of the inflection point. For asymmetrical models, ED50 should be estimated as "absolute" and not relative.
+getMeanFunctions() # To get the most used functions when fitting dose-response curves.
 
 
-
-#model.LL3<- drm(count ~ rate, pop, fct = LL.3(),  data = data, type = "continuous")
-
+mselect(model.LL.4,  list(L.3(), L.4(), L.5(), LL.2(), LL.3(), LL.3u(), LL.4(), LL.5(), W1.2(), W1.3(), W1.4(), W2.2(), W2.3(), W2.4(), BC.4(), BC.5(), LL2.2(), LL2.3(), LL2.3u(), LL2.4(), LL2.5(), AR.2(), AR.3(), MM.2(), MM.3(), baro5()), linreg = T)
 
 
-#modelFit(model.LL3)
-
-#summary(model.LL3) # NO parameter c (lower limit). It means lower limit was set to zero.
-
-
-#anova(model.LL3, model.LL4) # p-value > 0.05 means that there is no difference between models. Therefore, we can use model LL.3
-
-```
+# Lower IC, which actually is AIC (default), indicates the best model to be used. On the other hand, the highest the Lack of Fit, better the model. The two-, three-, and four-parameter log-logistic models are are symmetrical around the inflection point (parameter "e") while others (e.g. fiveparameter log-logistic, Gompertz, and Weibull) are asymmetrical. In symmetrical models, the parameter "e" and relative ED50 are identical, that is, they both indicate the dose that reduces the response midway between the upper and lower limits. In asymmetrical models, however, the parameter "e" does not have the same meaning as in symmetrical models, even though it is still the location of the inflection point. Therefore, in asymmetrical models, ED50 should be estimated as "absolute" and not relative.
 
 
 
-# ED50 AND ED 90
+model.W2.3 <- drm(count ~ rate, pop, fct = W2.3(),  data = data, type = "continuous")
 
-```{r}
+plot(fitted(model.W2.3), residuals(model.W2.3))
 
-ED(model.LL4, c(50, 90), type = "relative") 
+qqnorm(residuals(model.W2.3))
 
 
-# Estimated doses required for ED50, and ED90. Estimation of ED90 is statistically less accurate and often subject to high variance. Therefore, is better to use ED50.
+modelFit(model.W2.3)
+
+summary(model.W2.3)
+
+
+
+anova(model.W2.3, model.LL.4) # p-value > 0.05 means that there is no difference between models. Therefore, we can use model LL.3
 
 ```
 
 
-# ED 50 RI AND PARAMETERS STUDENT T-TEST COMPARISONS
+
+## ED50
 
 ```{r}
 
-EDcomp(model.LL4, c(50, 50), type = "relative", interval = "none", reverse = TRUE)
+#ED(model.W1.3, c(50), type = "relative", interval = "delta")
 
-EDcomp(model.LL4, c(90, 90), type = "relative", interval = "none", reverse = TRUE)
+
+ED50.A92 <- ED(model.W2.3, (summary(model.W2.3)$coefficients[3, 1] * 0.5), clevel = "A92", type = "absolute", interval = "delta")
+
+ED50.A66 <- ED(model.W2.3, (summary(model.W2.3)$coefficients[4, 1] * 0.5), clevel = "A66", type = "absolute", interval = "delta")
+
+
+```
+
+
+## ED 50 RI AND PARAMETERS STUDENT T-TEST COMPARISONS
+
+```{r}
+
+#EDcomp(model.W1.3, c(50, 50), type = "relative", interval = "none", reverse = F)
+
+
+EDcomp(model.W2.3, c((summary(model.W2.3)$coefficients[4, 1] * 0.5),
+                     (summary(model.W2.3)$coefficients[3, 1] * 0.5)), 
+       compMatch = c("A92", "A66"), type = "absolute", interval = "none", reverse = T)
+
 
 
 # Comparing b parameter (slope)
-compParm(model.LL4, strVal = "b", operator = "-")
+compParm(model.W2.3, strVal = "b", operator = "-")
 
 
 # Comparing d parameter (upper limit)
-compParm(model.LL4, strVal = "d", operator = "-")
+compParm(model.W2.3, strVal = "d", operator = "-")
 
-# Comparing e parameter (ED50)
-compParm(model.LL4, strVal = "e", operator = "-") #here comparing the difference, and not the ratio like in the EDcomp
+
+# Comparing e parameter (Infletion Point)
+compParm(model.W2.3, strVal = "e", operator = "-") # Remember that for assymetric models, the paramenter"e" does not reflect the ED50. 
 
 
 ```
@@ -136,14 +152,14 @@ compParm(model.LL4, strVal = "e", operator = "-") #here comparing the difference
 
 ```{r eval=FALSE, include=FALSE}
 
-tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/WiscWeeds/Waterhemp/Waterhemp PRE_Bill Stangel/Fome_DR_counts.tiff",
+tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/WiscWeeds/Waterhemp/Waterhemp PRE_Bill Stangel/Absolute ED50/Fome_DR_counts.tiff",
      width = 10, height = 8, units = "in", res = 600, compression = "lzw")
 
 
 par(mar = c(5,5,1,1))
 
 
-plot(model.LL4,
+plot(model.W2.3,
      type = "average",
      xlab = expression(paste("Fomesafen rate (g ai ha"^-1, ")")),
      ylab = expression(paste("Plant Density (plant pot"^-1, ")")),
@@ -159,12 +175,12 @@ plot(model.LL4,
 
 
 
-points(x = c(summary(model.LL4)$coefficients[7, 1], 
-             summary(model.LL4)$coefficients[8, 1]), 
-       y = c((summary(model.LL4)$coefficients[5, 1]/2), 
-             (summary(model.LL4)$coefficients[6, 1]/2)),
+points(x = c(ED50.A92[1, 1], 
+             ED50.A66[1, 1]),
+       y = c((summary(model.W2.3)$coefficients[3, 1]/2), 
+             (summary(model.W2.3)$coefficients[4, 1]/2)),
        pch = 8,
-       cex = 1.5)
+       cex = 1.3)
 
 
 #abline(v = 263, 
