--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/Mesotrione_Absolute ED/MIs_Meso Only_GC_A101_ DR Biomass.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/Mesotrione_Absolute ED/MIs_Meso Only_GC_A101_ DR Biomass.Rmd
@@ -91,7 +91,7 @@ model.W2.3 <- drm(biomass ~ rate, temp, fct = W2.3(), data = data.A101.meso, typ
 
 plot(fitted(model.W2.3), residuals(model.W2.3))
 
-
+qqnorm(residuals(model.W2.3))
                 
 modelFit(model.W2.3)
 
