--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/2,4-D/2,4-D_Absolute ED/MIs_2,4-D Only_GH_All Pops_ DR Biomass.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/2,4-D/2,4-D_Absolute ED/MIs_2,4-D Only_GH_All Pops_ DR Biomass.Rmd
@@ -27,7 +27,7 @@ library(dplyr)
 
 ```{r}
 
-#data <- read.csv("Data Sheet_2,4-D_GH.csv")
+data <- read.csv("Data Sheet_2,4-D_GH.csv")
 
 str(data)
 
