--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Atrazine/2023/Atrazine_Absolute ED/MIs_Atra_GH_A75_DR Biomass.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Atrazine/2023/Atrazine_Absolute ED/MIs_Atra_GH_A75_DR Biomass.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Waterhemp MIs GH Atrazine Biomass"
 author: "Felipe Faleco"
-date: "02/21/2023"
+date: "09/08/2023"
 output:
   html_document:
     df_print: paged
@@ -91,17 +91,17 @@ mselect(model.LL4,  list(L.3(), L.4(), L.5(), LL.2(), LL.3(), LL.3u(), LL.4(), L
 # Lower IC, which actually is AIC (default), indicates the best model to be used. On the other hand, the highest the Lack of Fit, better the model. The two-, three-, and four-parameter log-logistic models are are symmetrical around the inflection point (parameter "e") while others (e.g. fiveparameter log-logistic, Gompertz, and Weibull) are asymmetrical. In symmetrical models, the parameter "e" and relative ED50 are identical, that is, they both indicate the dose that reduces the response midway between the upper and lower limits. In asymmetrical models, however, the parameter "e" does not have the same meaning as in symmetrical models, even though it is still the location of the inflection point. Therefore, in asymmetrical models, ED50 should be estimated as "absolute" and not relative.
 
 
-model.W1.3 <- drm(biomass ~ rate, herb, fct = W1.3(), data = data_A75, type = "continuous")
+model.W2.3 <- drm(biomass ~ rate, herb, fct = W2.3(), data = data_A75, type = "continuous")
 
-plot(fitted(model.W1.3), residuals(model.W1.3))
-
-
-modelFit(model.W1.3)
-
-summary(model.W1.3)
+plot(fitted(model.W2.3), residuals(model.W2.3))
 
 
-anova(model.W1.3, model.LL4) # p-value > 0.05 means that there is no difference between models. Therefore, we can use model W1.3
+modelFit(model.W2.3)
+
+summary(model.W2.3)
+
+
+anova(model.W2.3, model.LL4) # p-value > 0.05 means that there is no difference between models. Therefore, we can use model W1.3
 
 ```
 
@@ -114,11 +114,11 @@ anova(model.W1.3, model.LL4) # p-value > 0.05 means that there is no difference 
 #ED(model.W1.3, c(50), type = "relative", interval = "delta")
 
 
-ED50.atra <- ED(model.W1.3, (summary(model.W1.3)$coefficients[4, 1] * 0.5), clevel = "atra", type = "absolute", interval = "delta")
+ED50.atra <- ED(model.W2.3, (summary(model.W2.3)$coefficients[4, 1] * 0.5), clevel = "atra", type = "absolute", interval = "delta")
 
-ED50.atra.P450 <- ED(model.W1.3, (summary(model.W1.3)$coefficients[5, 1] * 0.5), clevel = "atra+P450", type = "absolute", interval = "delta")
+ED50.atra.P450 <- ED(model.W2.3, (summary(model.W2.3)$coefficients[5, 1] * 0.5), clevel = "atra+P450", type = "absolute", interval = "delta")
 
-ED50.atra.GST <- ED(model.W1.3, (summary(model.W1.3)$coefficients[6, 1] * 0.5), clevel = "atra+GST", type = "absolute", interval = "delta")
+ED50.atra.GST <- ED(model.W2.3, (summary(model.W2.3)$coefficients[6, 1] * 0.5), clevel = "atra+GST", type = "absolute", interval = "delta")
 
 
 # In this case, fitting relative and absolute resulted in the same ED50. Perhaps because W1.3 has a lower limit = 0. In simulations using the W1.4, then the relative and absolute ED50 are different. 
@@ -133,26 +133,26 @@ ED50.atra.GST <- ED(model.W1.3, (summary(model.W1.3)$coefficients[6, 1] * 0.5), 
 #EDcomp(model.W1.3, c(50, 50), type = "relative", interval = "none", reverse = F)
 
 
-EDcomp(model.W1.3, c((summary(model.W1.3)$coefficients[4, 1] * 0.5),
-                     (summary(model.W1.3)$coefficients[5, 1] * 0.5)), 
+EDcomp(model.W2.3, c((summary(model.W2.3)$coefficients[4, 1] * 0.5),
+                     (summary(model.W2.3)$coefficients[5, 1] * 0.5)), 
        compMatch = c("atra", "atra+P450"), type = "absolute", interval = "none", reverse = T)
 
 
-EDcomp(model.W1.3, c((summary(model.W1.3)$coefficients[4, 1] * 0.5),
-                     (summary(model.W1.3)$coefficients[6, 1] * 0.5)), 
+EDcomp(model.W2.3, c((summary(model.W2.3)$coefficients[4, 1] * 0.5),
+                     (summary(model.W2.3)$coefficients[6, 1] * 0.5)), 
        compMatch = c("atra", "atra+GST"), type = "absolute", interval = "none", reverse = T)
 
 
 # Comparing b parameter (slope)
-compParm(model.W1.3, strVal = "b", operator = "-")
+compParm(model.W2.3, strVal = "b", operator = "-")
 
 
 # Comparing d parameter (upper limit)
-compParm(model.W1.3, strVal = "d", operator = "-")
+compParm(model.W2.3, strVal = "d", operator = "-")
 
 
 # Comparing e parameter (Infletion Point)
-compParm(model.W1.3, strVal = "e", operator = "-") # Remember that for assymetric models, the paramenter"e" does not reflect the ED50. 
+compParm(model.W2.3, strVal = "e", operator = "-") # Remember that for assymetric models, the paramenter"e" does not reflect the ED50. 
 
 
 ```
@@ -163,14 +163,14 @@ compParm(model.W1.3, strVal = "e", operator = "-") # Remember that for assymetri
 
 ```{r}
 
-tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Atrazine/Atrazine_Absolute ED/GH_Atra_A75_DR Biomass.tiff",
+tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Atrazine/2023/Atrazine_Absolute ED/MIs_Atra_GH_A75_DR Biomass.tiff",
      width = 10, height = 8, units = "in", res = 600, compression = "lzw")
 
 
 par(mar = c(5,5,1,1))
 
 
-plot(model.W1.3,
+plot(model.W2.3,
      type = "average",
      xlab = expression(paste("Atrazine rate (g ai ha"^-1, ")")),
      ylab = expression(paste("A75 Biomass (g plant"^-1, ")")),
@@ -190,9 +190,9 @@ plot(model.W1.3,
 points(x = c(ED50.atra[1, 1],
              ED50.atra.P450[1, 1],
              ED50.atra.GST[1, 1]),
-       y = c((summary(model.W1.3)$coefficients[4, 1]/2), 
-             (summary(model.W1.3)$coefficients[5, 1]/2),
-             (summary(model.W1.3)$coefficients[6, 1]/2)),
+       y = c((summary(model.W2.3)$coefficients[4, 1]/2), 
+             (summary(model.W2.3)$coefficients[5, 1]/2),
+             (summary(model.W2.3)$coefficients[6, 1]/2)),
        pch = 8,
        cex = 1.3)
 
